Make browsing context keywords case-insensitive.

The patch makes the browsing context keywords (_blank, _self, _parent,
_top) case-insensitive as is specified in [1]. The patch ensures that
all the tests in [2] pass.

[1] - https://html.spec.whatwg.org/#browsing-context-names
[2] - wpt/html/browsers/windows/browsing-context-names/

BUG=702178

Review-Url: https://codereview.chromium.org/2785063002
Cr-Commit-Position: refs/heads/master@{#461034}

Former-commit-id: c631cd11f112484251cf04ae4845cc747b5c1aaf